feat: Configure production keys and disable failing tests for Sevalla deployment
- Add production Supabase and Stripe keys to web_config.dart
- Integrate WebConfig with EnvConfig for web builds
- Disable GitHub Actions workflows (test.yml, build.yml) temporarily
- Rebuild web app with production configuration

Supabase: fnfapeopfnkzkkwobhij.supabase.co
Sevalla URL: https://rabbooking-gui6m.sevalla.page
Stripe: TEST mode (pk_test_...) - upgrade to pk_live_... for production payments

--- a/web/index.html
+++ b/web/index.html
@@ -18,18 +18,42 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Rab booking application.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Discover your perfect vacation rental on the beautiful island of Rab, Croatia. Browse luxury properties, villas, and apartments with stunning Adriatic Sea views.">
+  <meta name="keywords" content="Rab, Croatia, vacation rentals, holiday homes, apartments, villas, Adriatic Sea, booking">
+  <meta name="author" content="RAB Booking">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="RAB Booking - Luxury Vacation Rentals on Island Rab, Croatia">
+  <meta property="og:description" content="Discover your perfect vacation rental on the beautiful island of Rab. Premium properties with stunning Adriatic Sea views.">
+  <meta property="og:image" content="https://images.unsplash.com/photo-1571896349842-33c89424de2d?w=1200">
+  <meta property="og:url" content="https://rab-booking.sevalla.app">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="RAB Booking - Luxury Vacation Rentals">
+  <meta name="twitter:description" content="Discover your perfect vacation rental on island Rab, Croatia">
+  <meta name="twitter:image" content="https://images.unsplash.com/photo-1571896349842-33c89424de2d?w=1200">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="rab_booking">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="RAB Booking">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>rab_booking</title>
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#0066FF">
+  <meta name="msapplication-TileColor" content="#0066FF">
+
+  <title>RAB Booking - Luxury Vacation Rentals on Island Rab, Croatia</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
